fix(web.hosting): fix issue hosting order with alldom
ref: MANAGER-11731

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/domain/webhosting/order/steps/hosting/domain-webhosting-order-steps-hosting.html
+++ b/packages/manager/apps/web/client/app/domain/webhosting/order/steps/hosting/domain-webhosting-order-steps-hosting.html
@@ -18,7 +18,7 @@
         data-ng-if="$ctrl.catalog"
         data-user="$ctrl.user"
         data-catalog="$ctrl.catalog"
-        data-offers="$ctrl.hostingOffers"
+        data-offers="$ctrl.availableOffers"
         data-show-details="$ctrl.showDetails"
         data-on-group-offer-click="$ctrl.onHostingGroupOfferClick(groupOffer, versionOffer)"
     >
