--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/add-node/add-node.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/add-node/add-node.html
@@ -5,8 +5,20 @@
     data-secondary-action="$ctrl.cancel()"
     data-secondary-label="{{:: 'pci_databases_general_information_add_node_cancel' | translate}}"
     data-loading="$ctrl.addingNode"
-    data-heading="{{:: 'pci_databases_general_information_add_node' | translate}}"
 >
+    <div class="row align-items-center">
+        <section class="col-sm-12 col-md-8">
+            <h2
+                data-translate="pci_databases_general_information_add_node"
+            ></h2>
+        </section>
+        <section class="col-sm-12 col-md-4">
+            <pci-projects-project-database-switch-price
+                data-show-monthly-prices="$ctrl.showMonthlyPrices"
+                data-ng-click="$ctrl.computePrice()"
+            ></pci-projects-project-database-switch-price>
+        </section>
+    </div>
     <span
         data-translate="pci_databases_general_information_add_node_description"
         data-translate-values="{
@@ -18,7 +30,9 @@
         data-tax="$ctrl.price.tax"
         data-user="$ctrl.user"
         data-show-zero-price="true"
-        data-interval="'hour'"
     >
     </ovh-manager-catalog-price>
+    <strong
+        data-ng-bind="($ctrl.showMonthlyPrices ? 'pci_databases_general_information_price_unit_month' : 'pci_databases_general_information_price_unit_hour') | translate"
+    ></strong>
 </oui-modal>
