--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-node/upgrade-node.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-node/upgrade-node.html
@@ -11,18 +11,29 @@
         data-translate="pci_databases_general_information_upgrade_node_warning"
     ></span>
 </oui-message>
-<p
-    data-translate="pci_databases_general_information_upgrade_node_description"
-    data-translate-values="{
-        currentNodeModel: $ctrl.currentFlavor.name
-    }"
-></p>
+<div class="row">
+    <section class="col-sm-12 col-md-10">
+        <p
+            data-translate="pci_databases_general_information_upgrade_node_description"
+            data-translate-values="{
+            currentNodeModel: $ctrl.currentFlavor.name
+        }"
+        ></p>
+    </section>
+    <section class="col-sm-12 col-md-2">
+        <pci-projects-project-database-switch-price
+            data-show-monthly-prices="$ctrl.showMonthlyPrices"
+        ></pci-projects-project-database-switch-price>
+    </section>
+</div>
+
 <pci-projects-project-database-flavors-list
     data-current-flavor="$ctrl.currentFlavor"
     data-on-change="$ctrl.onFlavorSelect(selectedFlavor)"
     data-flavors="$ctrl.flavors"
     data-selected-flavor="$ctrl.selectedFlavor"
     data-user="$ctrl.user"
+    data-show-monthly-prices="$ctrl.showMonthlyPrices"
 ></pci-projects-project-database-flavors-list>
 
 <div data-ng-if="$ctrl.upgradingFlavor">
