--- a/packages/manager/modules/email-domain/src/general-informations/email-domain-general-informations.html
+++ b/packages/manager/modules/email-domain/src/general-informations/email-domain-general-informations.html
@@ -1,4 +1,5 @@
 <div>
+    <wuc-spf-banner></wuc-spf-banner>
     <div data-ovh-alert="{{alerts.main}}"></div>
     <div class="row d-md-flex">
         <div class="col-sm-4 mb-5">
