fix(web): check dns zone availabilty
 Check DNS Zone availability in Step 1
 ref: DTRSD-115429

Signed-off-by: Anoop N <anoop.n@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/dns-zone/new/dns-zone-new.html
+++ b/packages/manager/apps/web/client/app/dns-zone/new/dns-zone-new.html
@@ -10,7 +10,10 @@
     </oui-guide-menu>
 </oui-header>
 
-<div data-ovh-alert="{{$ctrl.alerts.main}}"></div>
+<div
+    data-ng-attr-id="{{:: $ctrl.constructor.getAlerterId($ctrl.alerts.main)}}"
+    data-ovh-alert="{{$ctrl.alerts.main}}"
+></div>
 <p data-translate="domains_newdnszone_order_example"></p>
 <p class="font-italic" data-translate="domains_newdnszone_order_usage"></p>
 
