--- a/packages/manager/apps/dedicated/client/app/dedicated/server/servers.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/servers.html
@@ -3,6 +3,10 @@
         data-heading="{{ :: 'dedicated_servers_title' | translate }}"
     ></oui-header>
 
+    <ovh-manager-auto-renew-2016-deployment-banner
+        data-ng-if="$ctrl.isAutorenew2016DeploymentBannerAvailable"
+    ></ovh-manager-auto-renew-2016-deployment-banner>
+
     <oui-datagrid
         id="dg-servers"
         data-page-size="{{ $ctrl.paginationSize }}"
