fix: pr comment
DATATR-311

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/upgrade-storage.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/upgrade-storage.html
@@ -87,7 +87,7 @@
                                 >
                                 </ovh-manager-catalog-price>
                                 <span
-                                    data-ng-bind="($ctrl.showMonthlyPrices ? 'pci_databases_general_information_upgrade_storage_summary_price_monthly_unit' : 'pci_databases_general_information_upgrade_storage_summary_price_hourly_unit') | translate"
+                                    data-ng-bind="$ctrl.priceUnitTranslation"
                                 ></span>
                             </div>
                             <div
@@ -104,7 +104,7 @@
                                 >
                                 </ovh-manager-catalog-price>
                                 <span
-                                    data-ng-bind="($ctrl.showMonthlyPrices ? 'pci_databases_general_information_upgrade_storage_summary_price_monthly_unit' : 'pci_databases_general_information_upgrade_storage_summary_price_hourly_unit') | translate"
+                                    data-ng-bind="$ctrl.priceUnitTranslation"
                                 ></span>
                             </div>
                             <div
@@ -121,7 +121,7 @@
                                 >
                                 </ovh-manager-catalog-price>
                                 <span
-                                    data-ng-bind="($ctrl.showMonthlyPrices ? 'pci_databases_general_information_upgrade_storage_summary_price_monthly_unit' : 'pci_databases_general_information_upgrade_storage_summary_price_hourly_unit') | translate"
+                                    data-ng-bind="$ctrl.priceUnitTranslation"
                                 ></span>
                             </div>
                         </div>
