feat(dedicated): add eol centos7 cpanel banner
ref: MANAGER-11689

Signed-off-by: Quentin Pavy <contact@quentinpavy.com>

--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/server.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/server.html
@@ -120,6 +120,10 @@
 </header>
 
 <div>
+    <!-- data-translate="common_expired" -->
+    <ovh-manager-cpanel-eol-banner
+        data-ng-if="centos7Cpanel"
+    ></ovh-manager-cpanel-eol-banner>
     <div
         class="alert alert-danger"
         role="alert"
