feat(iam): add onboarding tracking
ref: MANAGER-10789
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/dashboard/policies/policies.template.html
+++ b/packages/manager/modules/iam/src/dashboard/policies/policies.template.html
@@ -70,6 +70,7 @@
                 data-advanced-mode="$ctrl.advancedMode"
                 data-alert="$ctrl.alert"
                 data-go-to="$ctrl.goTo"
+                data-track-click="$ctrl.trackClick"
             >
             </iam-advanced-mode-switch>
         </oui-datagrid-topbar>
