--- a/packages/manager/modules/iam/src/onboarding/onboarding.template.html
+++ b/packages/manager/modules/iam/src/onboarding/onboarding.template.html
@@ -10,24 +10,31 @@
         <p data-translate="iam_onboarding_description_2"></p>
         <a
             class="mt-3 oui-button oui-button_primary oui-button_l text-light"
-            data-translate="iam_onboarding_cta_1"
-            ui-sref="iam.policy.create"
-            target="_self"
             rel="noopener"
+            target="_self"
+            data-track-name="{{:: $ctrl.TAG.ONBOARDING__ADD_POLICY }}"
+            data-track-on="click"
+            data-track-type="action"
+            data-ui-sref="iam.policy.create"
         >
+            <span data-translate="iam_onboarding_cta_1"></span>
         </a>
         <a
             class="mt-3 oui-button oui-button_secondary oui-button_l"
-            target="_self"
             rel="noopener"
+            target="_self"
             data-ng-href="{{:: $ctrl.accountUsersURL }}"
-            data-translate="iam_onboarding_cta_2"
+            data-track-name="{{:: $ctrl.TAG.ONBOARDING__ADD_USER }}"
+            data-track-on="click"
+            data-track-type="action"
         >
+            <span data-translate="iam_onboarding_cta_2"></span>
         </a>
         <iam-advanced-mode-switch
             data-advanced-mode="$ctrl.advancedMode"
             data-alert="$ctrl.alert"
             data-go-to="$ctrl.goTo"
+            data-track-click="$ctrl.trackClick"
         >
         </iam-advanced-mode-switch>
     </onboarding-description>
