--- a/packages/manager/modules/pci/src/projects/project/data-integration/tabs/dashboard/dashboard.html
+++ b/packages/manager/modules/pci/src/projects/project/data-integration/tabs/dashboard/dashboard.html
@@ -48,7 +48,7 @@
                 data-jobs="$ctrl.selectedWorkflow.jobs"
             ></pci-project-data-integration-jobs-list>
             <oui-message
-                data-type="warning"
+                data-type="info"
                 data-ng-if="!$ctrl.selectedWorkflow.jobs.length"
             >
                 <span
