fix(web): fix text out of the box for DNS records
ref: DTRSD-117010

Signed-off-by: David Arsène <david.arsene.ext@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/domain/zone/record/resume.html
+++ b/packages/manager/apps/web/client/app/domain/zone/record/resume.html
@@ -8,7 +8,7 @@
         <dd data-ng-bind="ctrl.model.fieldType"></dd>
 
         <dt data-translate="domain_configuration_dns_entry_add_domain"></dt>
-        <dd data-ng-bind="ctrl.getResumeDomain()"></dd>
+        <dd data-ng-bind="ctrl.getResumeDomain()" class="word-break"></dd>
 
         <dt
             data-ng-show="ctrl.model.ttlSelect === 'custom' && model.ttl !== null"
