--- a/packages/manager/modules/sign-up/src/form/details/details.html
+++ b/packages/manager/modules/sign-up/src/form/details/details.html
@@ -218,6 +218,7 @@
                     name="sms-consent"
                     data-model="$ctrl.signUpFormCtrl.smsConsent"
                     data-disabled="$ctrl.signUpFormCtrl.model.phoneType !== 'mobile'"
+                    data-on-change="$ctrl.onSmsConsentChange(modelValue)"
                 >
                     <span
                         data-translate="sign_up_details_field_sms_consent"
