feat(dedicated.nutanix): update the catalog endpoint (#9738)
ref: MANAGER-11425

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/modules/nutanix/src/dashboard/nodes/node/general-info/bandwidth-private-order/template.html
+++ b/packages/manager/modules/nutanix/src/dashboard/nodes/node/general-info/bandwidth-private-order/template.html
@@ -2,7 +2,7 @@
     service-name="{{ $ctrl.server.name }}"
     on-error="$ctrl.handleError(error)"
     on-success="$ctrl.handleSuccess(message)"
-    at-track="$ctrl.atTrack"
+    track-click="$ctrl.trackClick"
     tracking-prefix="$ctrl.trackingPrefix"
     go-back="$ctrl.goBack"
     has-default-payment-method="$ctrl.hasDefaultPaymentMethod"
