--- a/packages/manager/modules/nutanix/src/dashboard/nodes/node/general-info/template.html
+++ b/packages/manager/modules/nutanix/src/dashboard/nodes/node/general-info/template.html
@@ -167,7 +167,7 @@
                         data-bandwidth-option="$ctrl.bandwidthInformations.bandwidthOption"
                         data-bandwidth-vrack-option="$ctrl.bandwidthInformations.bandwidthVrackOptions"
                         data-bandwidth-vrack-order-option="$ctrl.bandwidthInformations.bandwidthVrackOrderOptions"
-                        data-order-private-link="$ctrl.orderPrivateBandwidthLink"
+                        data-order-private-link="$ctrl.getOrderPrivateBandwidthLink()"
                         data-order-public-link="$ctrl.orderPublicBandwidthLink"
                         data-server="$ctrl.server"
                         data-specifications="$ctrl.specifications"
