feat(dedicated.nutanix): changes related to nutanix scale up and down
ref: MANAGER-11203
Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>
Co-authored-by: CDS Translator Agent <opensource@ovh.net>
Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/modules/bm-server-components/src/order-private-bandwidth/private-order.html
+++ b/packages/manager/modules/bm-server-components/src/order-private-bandwidth/private-order.html
@@ -5,7 +5,7 @@
 >
     <div class="text-center">
         <oui-spinner></oui-spinner>
-        <p data-translate="server_order_bandwidth_load"></p>
+        <p data-translate="server_order_bandwidth_vrack_load"></p>
     </div>
 </oui-modal>
 <!-- Bandwidth addons order modal -->
@@ -60,6 +60,10 @@
                 <oui-message data-type="warning">
                     <span
                         data-translate="server_order_bandwidth_warning"
+                    ></span>
+                    <span
+                        data-ng-if="$ctrl.isClusterNode"
+                        data-translate="server_node_order_bandwidth_warning"
                     ></span>
                 </oui-message>
             </form>
