--- a/packages/manager/modules/nutanix/src/dashboard/general-info/template.html
+++ b/packages/manager/modules/nutanix/src/dashboard/general-info/template.html
@@ -218,12 +218,13 @@
             on-error="$ctrl.handleError(error)"
             go-to-upgrade-private-bandwidth="$ctrl.goToUpgradePrivateBandwidth"
             private-bandwidth-service-id="$ctrl.privateBandwidthServiceId"
+            is-old-cluster="$ctrl.isOldCluster"
         >
         </nutanix-network-tile>
     </div>
 
     <!-- TECHNICAL DETAILS -->
-    <div class="col-md-6 col-lg-4 mb-3">
+    <div class="col-md-6 col-lg-4 mb-3" data-ng-if="$ctrl.isOldCluster">
         <server-technical-details
             technical-details="$ctrl.technicalDetails"
         ></server-technical-details>
