--- a/packages/manager/modules/pci/src/projects/onboarding/onboarding.html
+++ b/packages/manager/modules/pci/src/projects/onboarding/onboarding.html
@@ -1,5 +1,4 @@
 <div class="pci_projects_onboarding w-100 h-100" style="overflow: auto;">
-
     <!--Trusted zone badge-->
     <div class="text-center mt-3">
         <ovh-manager-trusted-nic-label
@@ -7,41 +6,55 @@
         ></ovh-manager-trusted-nic-label>
     </div>
 
-    <div class="row">
-        <div class="col-md-6 p-5">
+    <div class="d-grid gap-1 col-md-6 offset-xs-1 offset-md-3 mb-4 text-center">
+        <img class="w-100" data-ng-src="{{ $ctrl.illustration }}" alt="" />
+        <div>
             <account-migration-notification></account-migration-notification>
             <h1 data-translate="pci_projects_onboarding_title"></h1>
             <p data-translate="pci_projects_onboarding_description1"></p>
             <p data-translate="pci_projects_onboarding_description2"></p>
-            <p data-translate="pci_projects_onboarding_description3"></p>
+
+            <!-- HDS checkbox and banner info -->
+            <hds-option
+                data-ng-if="$ctrl.hds.isAvailable && $ctrl.isValidHdsSupportLevel"
+                data-hds="$ctrl.hds"
+                data-model="$ctrl.model"
+                data-on-hds-checkbox-changed="$ctrl.onHdsCheckboxChanged(hdsCheckbox)"
+            >
+            </hds-option>
+
+            <!-- contracts -->
+            <ovh-contracts-summary
+                data-inline-items="true"
+                data-items="$ctrl.summary.contracts"
+                data-model="$ctrl.model.agreements"
+                data-name="agreements"
+            >
+            </ovh-contracts-summary>
 
             <!--Create a project-->
-            <a data-ng-if="!$ctrl.isTrustedZone"
-               class="oui-button oui-button_primary"
-               data-ui-sref="pci.projects.new"
-               data-track-on="click"
-               data-track-name="PCI_PROJECTS_ONBOARDING_NEW_PROJECT"
-               data-track-type="navigation"
+            <oui-button
+                variant="primary"
+                data-ng-if="!$ctrl.isTrustedZone"
+                data-on-click="$ctrl.onCreateProjectClick()"
+                disabled="!$ctrl.model.agreements"
             >
-            <span
-                data-translate="pci_projects_onboarding_create_project"
-            ></span>
-            </a>
+                <span
+                    data-translate="pci_projects_onboarding_create_project"
+                ></span>
+            </oui-button>
 
             <!--Call customer-->
             <div data-ng-if="$ctrl.isTrustedZone">
-                <p class="m-0 font-weight-bold"
-                   data-translate="pci_projects_onboarding_banner_trusted_customer_info_1">
-                </p>
-                <p class="m-0 font-weight-bold"
-                   data-translate="pci_projects_onboarding_banner_trusted_customer_info_2">
-                </p>
+                <p
+                    class="m-0 font-weight-bold"
+                    data-translate="pci_projects_onboarding_banner_trusted_customer_info_1"
+                ></p>
+                <p
+                    class="m-0 font-weight-bold"
+                    data-translate="pci_projects_onboarding_banner_trusted_customer_info_2"
+                ></p>
             </div>
         </div>
     </div>
-    <img
-        class="d-none d-lg-block"
-        data-ng-src="{{ $ctrl.illustration }}"
-        alt=""
-    />
 </div>
