--- a/packages/manager/apps/web/client/app/hosting/database/DATABASE.html
+++ b/packages/manager/apps/web/client/app/hosting/database/DATABASE.html
@@ -100,7 +100,7 @@
                         <oui-action-menu-item
                             data-ng-if="hosting.sqlPriveInfo.hasPrivateDatabaseToActivate"
                             data-ui-sref="app.hosting.dashboard.database.private-sql-activation"
-                            data-on-click="$ctrl.onCreateDatabaseClick()"
+                            data-on-click="$ctrl.onActivateWebCloudDatabaseClick()"
                         >
                             <span
                                 data-translate="hosting_dashboard_service_privatesql_active_long"
