feat(project.order): change message type from err to info
ref: MANAGER-11506
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/additional-ips/order/add.html
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/order/add.html
@@ -178,7 +178,7 @@
             data-name="additional_ip_create_step_attach_instance"
         >
             <div data-ng-if="$ctrl.filteredInstances.length === 0">
-                <oui-message data-type="error">
+                <oui-message data-type="info">
                     <p>
                         <span
                             data-translate="{{ 'pci_additional_ip_create_no_instance_message_' + $ctrl.selectedIpType.name }}"
